infra/envoy/envoy.yaml
static_resources:
  listeners:
    - name: local_listener
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 8080
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                stat_prefix: sounds_right_http
                generate_request_id: true
                access_log:
                  - name: envoy.access_loggers.stdout
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.access_loggers.stream.v3.StdoutAccessLog
                route_config:
                  name: local_routes
                  virtual_hosts:
                    - name: sounds_right
                      domains:
                        - "*"
                      routes:
                        - match:
                            path: /api/health
                          direct_response:
                            status: 403
                            body:
                              inline_string: "Forbidden"
                        - match:
                            prefix: /api/
                          route:
                            cluster: api
                        - match:
                            prefix: /
                          route:
                            cluster: web
                http_filters:
                  - name: envoy.filters.http.cors
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.cors.v3.Cors
                  - name: envoy.filters.http.router
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
  clusters:
    - name: api
      connect_timeout: 1s
      type: STRICT_DNS
      load_assignment:
        cluster_name: api
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: sr-api
                      port_value: 8000
    - name: web
      connect_timeout: 1s
      type: STRICT_DNS
      load_assignment:
        cluster_name: web
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: web
                      port_value: 3000
